<resources>
    <string name="app_name">WarGame_v2</string>
    <string name="attack_50pt">50pt attack</string>
    <string name="attack_30pt">30pt attack</string>
    <string name="attack_10pt">10pt attack</string>
    <string name="Top_10">Top 10</string>
    <string name="SuperMan_Won">SUPERMAN WON!</string>
    <string name="New_Game">New Game</string>
    <string name="Home">Home</string>
    <string name="WAR_GAME">WAR GAME</string>
    <string name="START_GAME">START GAME</string>
    <string name="Rank">RANK</string>
    <string name="pick">PICK</string>

</resources>