<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="src.Activities.Activity_Victory">

    <ImageView
        android:id="@+id/victory_IV_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/victory_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/SuperMan_Won"
        android:textColor="#F44336"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/victory_BTN_newGame"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/New_Game"
        android:textColor="#DEE3E2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/victory_LBL_title"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/victory_BTN_home"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/Home"
        android:textColor="#DEE3E2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/victory_BTN_newGame"
        android:background="@drawable/rounded_button"/>

</RelativeLayout>