<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="src.Activities.Activity_Home">

    <ImageView
        android:id="@+id/home_IV_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/home_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/WAR_GAME"
        android:textColor="#FFEB3B"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/home_BTN_newGame"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/START_GAME"
        android:textColor="#DEE3E2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/home_LBL_title"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/home_BTN_rank"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/Rank"
        android:textColor="#DEE3E2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/home_BTN_newGame"
        android:background="@drawable/rounded_button"/>

</RelativeLayout>