<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#6AFDEF"
    tools:context="com.example.wargame_v2.Activities.Activity_Game">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <ProgressBar
            android:id="@+id/Game_PB_player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="10dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false"
            android:progressDrawable="@drawable/green_progress_bar"/>

        <ImageView
            android:id="@+id/Game_IV_player1"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/Game_IV_player1_Cube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/Game_BTN_50pt_player1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/attack_50pt"
            android:enabled="false"
            android:background="#B1BAA6"/>

        <Button
            android:id="@+id/Game_BTN_30pt_player1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:text="@string/attack_30pt"
            android:enabled="false"
            android:background="#B1BAA6"/>

        <Button
            android:id="@+id/Game_BTN_10pt_player1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:text="@string/attack_10pt"
            android:enabled="false"
            android:background="#B1BAA6"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

            <Button
                android:id="@+id/Game_BTN_pick"
                android:layout_width="85dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:text="PICK"
                android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/Game_BTN_50pt_player2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/attack_50pt"
            android:enabled="false"
            android:background="#B1BAA6"/>

        <Button
            android:id="@+id/Game_BTN_30pt_player2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:text="@string/attack_30pt"
            android:enabled="false"
            android:background="#B1BAA6"/>

        <Button
            android:id="@+id/Game_BTN_10pt_player2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:text="@string/attack_10pt"
            android:enabled="false"
            android:background="#B1BAA6"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <ProgressBar
            android:id="@+id/Game_PB_player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="10dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false"
            android:progressDrawable="@drawable/green_progress_bar"/>

        <ImageView
            android:id="@+id/Game_IV_player2"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/Game_IV_player2_Cube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>